# SceneWeaver

./: .eslintrc.cjs  .gitignore  README.md  SceneWeaver_PRODUCT_REDESIGN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATABASE.md  DECISIONS.md  KNOWN_LIMITATIONS.md  PACKAGING.md  PROGRESS.md  SEARCH_PIPELINE.md  TEST_PLAN.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: asset.rs  entity.rs  job.rs  library.rs  mod.rs  selects.rs  system.rs
src-tauri/src/core/: app_state.rs  cache.rs  db.rs  error.rs  export.rs  ffprobe.rs  fingerprint.rs  job_queue.rs  mod.rs  scanner.rs  scene_detect.rs  thumbnail.rs  video_derivatives.rs
src-tauri/src/models/: asset.rs  common.rs  entity.rs  job.rs  library.rs  mod.rs  search.rs  segment.rs  selects.rs
src-tauri/src/providers/: mod.rs  semantic_clip.rs  visual_embedding.rs
src/api/: index.ts
src/components/: MediaGrid.tsx  SegmentPanel.tsx
src/lib/: acgCreatorPack.test.ts  acgCreatorPack.ts  mediaFormat.test.ts  mediaFormat.ts  queryConditions.test.ts  queryConditions.ts  scanMetrics.test.ts  scanMetrics.ts
src/pages/: Entities.tsx  Home.tsx  Jobs.tsx  Libraries.tsx  LibraryDetail.tsx  Search.tsx  Selects.tsx  Settings.tsx
src/stores/: uiStore.ts
src/types/: index.ts
