[package]
name = "sceneweaver"
version = "0.1.0"
description = "本地多模态素材搜索与选片工作台"
authors = ["SceneWeaver Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.75"

[lib]
name = "sceneweaver_lib"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "sceneweaver"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
walkdir = "2"
globset = "0.4"
regex = "1"
directories = "5"
dunce = "1"
path-absolutize = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
blake3 = "1"
hex = "0.4"
which = "6"
once_cell = "1"
parking_lot = "0.12"
# The semantic model is optional at runtime.  Dynamic ORT keeps the GNU build
# portable; SceneWeaver never falls back to a Python installation.
fastembed = { version = "5.17.3", default-features = false, features = ["ort-load-dynamic", "hf-hub-native-tls", "image-models"] }
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic"] }
